News UAT/force-app/main/default/objects/Sales_Order__c/Sales_Order__c.object-meta.xml
<CustomObject>
    <description>Shell Order encompassing Booking(s) - to be related to an Opportunity Product/s</description>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO{0000000}</displayFormat>
        <label>Sales Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>