News UAT/force-app/main/default/objects/Sales_Order__c/fields/Ad_Taker__c.field-meta.xml
<CustomField>
    <fullName>Ad_Taker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ad Taker</description>
    <label>Ad Taker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Orders_AdTaker</relationshipName>
    <type>Lookup</type>
</CustomField>