News UAT/force-app/main/default/objects/Sales_Order__c/fields/AdjustmentTotal__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentTotal__c</fullName>
    <label>Adjustment Total</label>
    <summarizedField>Booking__c.AdjustmentTotal__c</summarizedField>
    <summaryForeignKey>Booking__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>