News UAT/force-app/main/default/objects/Sales_Order__c/fields/Advertiser_Account__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advertiser Account</description>
    <label>Advertiser Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders_Advertiser</relationshipName>
    <type>Lookup</type>
</CustomField>