News UAT/force-app/main/default/objects/Sales_Order__c/fields/Advertiser_Address__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Address__c</fullName>
    <formula>Advertiser_Account__r.Primary_Address__c</formula>
    <label>Advertiser Address</label>
    <type>Text</type>
</CustomField>