News UAT/force-app/main/default/objects/Sales_Order__c/fields/Booking_Division__c.field-meta.xml
<CustomField>
    <fullName>Booking_Division__c</fullName>
    <description>Division for Booking, primarily for CyberAd bookings.</description>
    <label>Booking Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADV</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>GAD</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>HWT</fullName>
            </value>
            <value>
                <fullName>LDR</fullName>
            </value>
            <value>
                <fullName>NWN</fullName>
            </value>
            <value>
                <fullName>QNP</fullName>
            </value>
            <value>
                <fullName>QST</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>NQN</fullName>
            </value>
            <value>
                <fullName>NTN</fullName>
            </value>
            <value>
                <fullName>MNG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>