News UAT/force-app/main/default/objects/Sales_Order__c/fields/Booking_Exists__c.field-meta.xml
<CustomField>
    <fullName>Booking_Exists__c</fullName>
    <description>To indicate whether a Sales Order has Bookings</description>
    <formula>IF( Number_of_Bookings__c  &gt; 0 ,  IMAGE(&#39;/img/msg_icons/confirm16.png&#39;, &#39;Yes&#39;) , IMAGE(&#39;/img/msg_icons/error16.png&#39;, &#39;No&#39;))</formula>
    <inlineHelpText>Does this Sales Order have a Booking/Bookings?</inlineHelpText>
    <label>Booking Exists</label>
    <type>Text</type>
</CustomField>