News UAT/force-app/main/default/objects/Sales_Order__c/fields/Booking_System_Account__c.field-meta.xml
<CustomField>
    <fullName>Booking_System_Account__c</fullName>
    <description>Booking System Account #</description>
    <formula>External_Account__r.Account_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking System Account #</label>
    <type>Text</type>
</CustomField>