News UAT/force-app/main/default/objects/Sales_Order__c/fields/Calc_External_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Calc_External_Account_Name__c</fullName>
    <description>Calculated external account name for new billing accounts.</description>
    <formula>IF(NOT(ISBLANK(External_Account__c)) ,  External_Account__r.Name,
if(Advertiser_Account__r.IsPersonAccount, Advertiser_Account__r.FirstName + &#39; &#39; + Advertiser_Account__r.LastName,
Advertiser_Account__r.Name  ))</formula>
    <label>Calc_External_Account_Name</label>
    <type>Text</type>
</CustomField>