News UAT/force-app/main/default/objects/Sales_Order__c/fields/Calc_External_id__c.field-meta.xml
<CustomField>
    <fullName>Calc_External_id__c</fullName>
    <formula>IF(ISBLANK( External_Id__c ),  Id ,External_Id__c)</formula>
    <label>Calc External id</label>
    <type>Text</type>
</CustomField>