News UAT/force-app/main/default/objects/Sales_Order__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>