News UAT/force-app/main/default/objects/Sales_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Placer Contact</description>
    <label>Placer Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Placer_Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <infoMessage>Should generally be related to the Placer Account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Orders (Placer Contact)</relationshipLabel>
    <relationshipName>Sales_Orders_PlacerContact</relationshipName>
    <type>Lookup</type>
</CustomField>