News UAT/force-app/main/default/objects/Sales_Order__c/fields/Creative_Account__c.field-meta.xml
<CustomField>
    <fullName>Creative_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Creative Account</description>
    <inlineHelpText>Creative – The account that will be delivering creative material.</inlineHelpText>
    <label>Creative Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders (Creative Account)</relationshipLabel>
    <relationshipName>Sales_Orders_CreativeAccount</relationshipName>
    <type>Lookup</type>
</CustomField>