News UAT/force-app/main/default/objects/Sales_Order__c/fields/Creative_Contact__c.field-meta.xml
<CustomField>
    <fullName>Creative_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Creative Contact</description>
    <label>Creative Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Creative_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Orders (Creative Contact)</relationshipLabel>
    <relationshipName>Sales_Orders_CreativeContact</relationshipName>
    <type>Lookup</type>
</CustomField>