News UAT/force-app/main/default/objects/Sales_Order__c/fields/Creative_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Creative_Contact_Email__c</fullName>
    <description>SFE-687 2015-09</description>
    <formula>Creative_Contact__r.Email</formula>
    <label>Creative Contact Email</label>
    <type>Text</type>
</CustomField>