News UAT/force-app/main/default/objects/Sales_Order__c/fields/Creative_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Creative_Contact_Name__c</fullName>
    <formula>Creative_Contact__r.FirstName + &#39; &#39; +  Creative_Contact__r.LastName</formula>
    <label>Creative_Contact_Name</label>
    <type>Text</type>
</CustomField>