News UAT/force-app/main/default/objects/Sales_Order__c/fields/Creative_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Creative_Contact_Phone__c</fullName>
    <formula>Creative_Contact__r.Phone</formula>
    <label>Creative Contact Phone #</label>
    <type>Text</type>
</CustomField>