News UAT/force-app/main/default/objects/Sales_Order__c/fields/Current_User_is_Adtaker__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Adtaker__c</fullName>
    <formula>Ad_Taker__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Adtaker</label>
    <type>Checkbox</type>
</CustomField>