News UAT/force-app/main/default/objects/Sales_Order__c/fields/External_Account__c.field-meta.xml
<CustomField>
    <fullName>External_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Booking/Billing Account</description>
    <inlineHelpText>Select the related Booking or Billing Account</inlineHelpText>
    <label>Booking System Account</label>
    <referenceTo>External_Account__c</referenceTo>
    <relationshipLabel>Sales Orders (External Account)</relationshipLabel>
    <relationshipName>Sales_Orders_ExternalAccount</relationshipName>
    <type>Lookup</type>
</CustomField>