News UAT/force-app/main/default/objects/Sales_Order__c/fields/External_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Address__c</fullName>
    <formula>IF(ISBLANK(External_Account__r.Street__c), &#39;&#39;, External_Account__r.Street__c + &#39;, &#39;) + IF(ISBLANK(External_Account__r.Suburb__c), &#39;&#39;, External_Account__r.Suburb__c + &#39;, &#39;) + IF(ISBLANK(External_Account__r.State__c ), &#39;&#39;, External_Account__r.State__c + &#39;, &#39;) + IF(ISBLANK(External_Account__r.Post_Code__c), &#39;&#39;, External_Account__r.Post_Code__c + &#39;, &#39;) + IF(ISBLANK(External_Account__r.Country__c), &#39;&#39;, External_Account__r.Country__c)</formula>
    <label>Booking System Account Address</label>
    <type>Text</type>
</CustomField>