News UAT/force-app/main/default/objects/Sales_Order__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Id</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>