News UAT/force-app/main/default/objects/Sales_Order__c/fields/First_Booking_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Booking_Created_Date_Time__c</fullName>
    <description>Field used for tracking opportunity actual revenue date (populated by workflow rule to be used in roll-up summary field)</description>
    <inlineHelpText>Field used for tracking opportunity actual revenue date (populated by workflow rule to be used in roll-up summary field)</inlineHelpText>
    <label>First Booking Created Date/Time</label>
    <summarizedField>Booking__c.CreatedDate</summarizedField>
    <summaryForeignKey>Booking__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>