News UAT/force-app/main/default/objects/Sales_Order__c/fields/Number_of_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bookings__c</fullName>
    <description>Number of Bookings</description>
    <label>Number of Bookings</label>
    <summaryForeignKey>Booking__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>