News UAT/force-app/main/default/objects/Sales_Order__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order Number</description>
    <label>Siebel Order #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>