News UAT/force-app/main/default/objects/Sales_Order__c/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payer Account</description>
    <inlineHelpText>Payer – The account that pays for the advertising.</inlineHelpText>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders (Payer Account)</relationshipLabel>
    <relationshipName>Sales_Orders_Payer</relationshipName>
    <type>Lookup</type>
</CustomField>