News UAT/force-app/main/default/objects/Sales_Order__c/fields/Placer_Account__c.field-meta.xml
<CustomField>
    <fullName>Placer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Placer Account on Order</description>
    <inlineHelpText>Placer – The account that places the booking request with us.</inlineHelpText>
    <label>Placer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders (Placer)</relationshipLabel>
    <relationshipName>Sales_Orders_Placer</relationshipName>
    <type>Lookup</type>
</CustomField>