News UAT/force-app/main/default/objects/Sales_Order__c/fields/Placer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Placer_Account_Name__c</fullName>
    <formula>Placer_Account__r.Name</formula>
    <label>Placer Account Name</label>
    <type>Text</type>
</CustomField>