News UAT/force-app/main/default/objects/Sales_Order__c/fields/Placer_Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Placer_Account_Phone__c</fullName>
    <formula>Placer_Account__r.Phone</formula>
    <label>Placer Account Phone</label>
    <type>Text</type>
</CustomField>