News UAT/force-app/main/default/objects/Sales_Order__c/fields/Placer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Placer_Contact_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>