News UAT/force-app/main/default/objects/Sales_Order__c/fields/Placer_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Placer_Contact_Fax__c</fullName>
    <formula>Contact__r.Fax</formula>
    <label>Fax #</label>
    <type>Text</type>
</CustomField>