News UAT/force-app/main/default/objects/Sales_Order__c/fields/Placer_Contact_Home__c.field-meta.xml
<CustomField>
    <fullName>Placer_Contact_Home__c</fullName>
    <description>Placer Phone # (changed from Home to Phone)</description>
    <formula>Contact__r.Phone</formula>
    <label>Phone #</label>
    <type>Text</type>
</CustomField>