News UAT/force-app/main/default/objects/Sales_Order__c/fields/Placer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Placer_Contact_Name__c</fullName>
    <formula>Contact__r.FirstName + &#39; &#39; +  Contact__r.LastName</formula>
    <label>Placer Contact Name</label>
    <type>Text</type>
</CustomField>