News UAT/force-app/main/default/objects/Sales_Order__c/fields/Placer_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Placer_Contact_Phone__c</fullName>
    <formula>SUBSTITUTE(Contact__r.Phone, &#39;+&#39;, &#39;&#39;)</formula>
    <label>Placer Contact Phone</label>
    <type>Text</type>
</CustomField>