News UAT/force-app/main/default/objects/Sales_Order__c/fields/Planner_Account__c.field-meta.xml
<CustomField>
    <fullName>Planner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Planner Account</description>
    <inlineHelpText>Planner – The account that has planned the advertising campaign.</inlineHelpText>
    <label>Planner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders (Planner Account)</relationshipLabel>
    <relationshipName>Sales_Orders_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>