News UAT/force-app/main/default/objects/Sales_Order__c/fields/Siebel_Id__c.field-meta.xml
<CustomField>
    <fullName>Siebel_Id__c</fullName>
    <externalId>true</externalId>
    <label>Siebel Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>