News UAT/force-app/main/default/objects/Sales_Order__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Booking Source System</description>
    <label>Booking System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cyber$ell</fullName>
                <default>true</default>
                <label>Cyber$ell</label>
            </value>
            <value>
                <fullName>CyberAd</fullName>
            </value>
            <value>
                <fullName>AdPoint</fullName>
            </value>
            <value>
                <fullName>OSCA</fullName>
            </value>
            <value>
                <fullName>NewsAdds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>