News UAT/force-app/main/default/objects/Sales_Order__c/fields/Status_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Status_As_Of__c</fullName>
    <description>Status As Of Date-Time</description>
    <label>Status As Of</label>
    <type>DateTime</type>
</CustomField>