News UAT/force-app/main/default/objects/Sales_Order__c/fields/Stored_Fax__c.field-meta.xml
<CustomField>
    <fullName>Stored_Fax__c</fullName>
    <label>Stored Fax</label>
    <type>Email</type>
</CustomField>