News UAT/force-app/main/default/objects/Sales_Order__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Rollup of booking costs</description>
    <label>Cost GST Excl</label>
    <summarizedField>Booking__c.Line_Item_Gross_Price__c</summarizedField>
    <summaryForeignKey>Booking__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>