News UAT/force-app/main/default/objects/Sales_Order__c/fields/Total_Cost_GST_Incl__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_GST_Incl__c</fullName>
    <formula>(1 + $Setup.News_Default_Setting__c.GST_Percentage__c) *  Total_Cost__c</formula>
    <label>Cost GST Incl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>