News UAT/force-app/main/default/objects/Sales_Order__c/fields/Total_Gross_Price_Ytd__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Price_Ytd__c</fullName>
    <label>Total Gross Price YTD</label>
    <summarizedField>Booking__c.Line_Item_Gross_Price_YTD__c</summarizedField>
    <summaryForeignKey>Booking__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>