News UAT/force-app/main/default/objects/Sales_Order__c/fields/Total_Gross_Price_YTD_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Price_YTD_Last_Modified__c</fullName>
    <description>last modified datetime for total gross price YTD</description>
    <label>Total Gross Price YTD Last Modified</label>
    <type>DateTime</type>
</CustomField>