News UAT/force-app/main/default/objects/Sales_Order__c/fields/TotalCredits__c.field-meta.xml
<CustomField>
    <fullName>TotalCredits__c</fullName>
    <label>Total Credits</label>
    <summarizedField>Booking__c.TotalCredits__c</summarizedField>
    <summaryForeignKey>Booking__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>