News UAT/force-app/main/default/objects/Sales_Order__c/fields/TotalDebits__c.field-meta.xml
<CustomField>
    <fullName>TotalDebits__c</fullName>
    <label>Total Debits</label>
    <summarizedField>Booking__c.TotalDebits__c</summarizedField>
    <summaryForeignKey>Booking__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>