News UAT/force-app/main/default/objects/Sales_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Order Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Order</fullName>
                <default>true</default>
                <label>Sales Order</label>
            </value>
            <value>
                <fullName>Web Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>