News UAT/force-app/main/default/objects/Sales_Order__c/validationRules/SO_Advertiser_Account_Required_for_Save.validationRule-meta.xml
<ValidationRule>
    <fullName>SO_Advertiser_Account_Required_for_Save</fullName>
    <active>true</active>
    <description>Ensure Advertiser Account is populated prior to Save.</description>
    <errorConditionFormula>ISBLANK( Advertiser_Account__c )</errorConditionFormula>
    <errorMessage>The Sales Order must have an Advertiser Account before saving.</errorMessage>
</ValidationRule>