News UAT/force-app/main/default/objects/Sales_Order__c/listViews/My_Orders_Adtaker_Not_owner.listView-meta.xml
<ListView>
    <fullName>My_Orders_Adtaker_Not_owner</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Source_System__c</columns>
    <columns>Payer_Account__c</columns>
    <columns>Placer_Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Ad_Taker__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Total_Cost__c</columns>
    <columns>Booking_Exists__c</columns>
    <filterScope>Everything</filterScope>
    <label>~My Orders (Adtaker, Not owner)</label>
</ListView>