News UAT/force-app/main/default/objects/Sales_Order__c/listViews/My_Orders_Last_24_Hours.listView-meta.xml
<ListView>
    <fullName>My_Orders_Last_24_Hours</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Source_System__c</columns>
    <columns>Payer_Account__c</columns>
    <columns>Placer_Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Ad_Taker__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Total_Cost__c</columns>
    <columns>Booking_Exists__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <filters>
        <field>Current_User_is_Adtaker__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>~My Orders Last 24 Hours</label>
</ListView>